syntax = "proto3";

package pb;

import "message.proto";
import "google/api/annotations.proto";

service TaskService{
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse){
    option (google.api.http) = {
      post: "/api/v1/task/create"
      body: "*"
    };
  }
  rpc SearchTasks(SearchTasksRequest) returns (SearchTasksResponse){
    option (google.api.http) = {
      get: "/api/v1/task/search"
    };
  }
  rpc TaskDetail(TaskDetailRequest) returns (TaskDetailResponse){
    option (google.api.http) = {
      get: "/api/v1/task/{task_id}/detail"
    };
  }
}

message CreateTaskRequest{
  optional int32 app_id = 2; //从metadata的token解析
  string name = 3;

  Strategy strategy = 51;   //策略

  Slot slot = 101;

}

message CreateTaskResponse{
  int64 id = 1;

  int32 code = 254; //0 success
  string message = 255;
}

message SearchTasksRequest{
  optional int32 app_id = 2; //从metadata的token解析
  //todo
}
message SearchTasksResponse{
  repeated Task tasks = 1;

  int32 code = 254; //0 success
  string message = 255;
}
message TaskDetailRequest{
  int64 task_id = 1;
  optional int32 app_id = 2; //从metadata的token解析
}
message TaskDetailResponse{
  Task task = 1;

  int32 code = 254; //0 success
  string message = 255;
}